test_programs/compile_failure/regression_10389_2/src/main.nr
fn main(x: u8) {
    match x {
        -1 => {},
        _ => {},
    }
}
